@@ -1,7 +1,7 @@
 README	1253d6a1	4767
 amplfunc.def	f433246a	105
 amplfunc.lnk	1209e237	111
-funcadd.c	f958ab5f	6570
+funcadd.c	ee299509	6789
 funcadd0.c	ee0ae780	1392
 funcaddk.c	18ed02b3	6334
 funcout.exp	efd599ef	12
